--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
 <hello name="{{ name }}"></hello>
-<p>
-  This is the first step
-</p>
+<!-- Create a paragraph with content "This is the first step" -->
