--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <hello name="{{ name }}"></hello>
 <p>
-  This is the third step
+  This is the first step
 </p>
+<p>
+  This is the second step
+</p>
+<!-- create a paragrapht with content "This is the third step" -->
