--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
   This is the first step
 </p>
 <p>
-  This is the second stepx
+  This is the second stepxy
 </p>
 <!-- create a paragrapht with content "This is the third step" -->
